fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,7 @@ ul {
   height: 100%;
   opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
+  z-index: 8;
   /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
@@ -305,6 +306,7 @@ ul {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 8px;
+  z-index: 9;
   /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .btn-close {
@@ -435,6 +437,7 @@ ul {
   /* transform: translateY(0px); */
   transform: scale(10);
   opacity: 0;
+  z-index: 1;
 
   /* transition: transform 2500ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
